[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marple"
version = "1"
authors = [
  { name="Not Me", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
